// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden match results > recife-1 · concentrado + quebra-casco (referência) 1`] = `
{
  "guardians": 3,
  "kills": {
    "dartfish": 26,
    "swimmer": 36,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 222,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 8,
  "timeMs": 167267,
  "upgrades": 5,
  "wavesCleared": 7,
}
`;

exports[`golden match results > recife-1 · contenção com baiacu 1`] = `
{
  "guardians": 3,
  "kills": {
    "dartfish": 26,
    "swimmer": 33,
    "tidebreaker": 1,
  },
  "leaks": {
    "swimmer": 3,
  },
  "pearls": 156,
  "reef": 17,
  "state": "victory",
  "stepsExecuted": 8,
  "timeMs": 195233,
  "upgrades": 5,
  "wavesCleared": 7,
}
`;

exports[`golden match results > recife-1 · duas unidades cruas 1`] = `
{
  "guardians": 2,
  "kills": {
    "dartfish": 19,
    "swimmer": 26,
    "tidebreaker": 1,
  },
  "leaks": {
    "dartfish": 7,
    "swimmer": 10,
  },
  "pearls": 666,
  "reef": 3,
  "state": "victory",
  "stepsExecuted": 2,
  "timeMs": 210683,
  "upgrades": 0,
  "wavesCleared": 7,
}
`;

exports[`golden match results > recife-1 · novatos: camarões + peixe-pedra veneno + golfinho sonar 1`] = `
{
  "guardians": 4,
  "kills": {
    "dartfish": 26,
    "swimmer": 34,
    "tidebreaker": 1,
  },
  "leaks": {
    "swimmer": 2,
  },
  "pearls": 138,
  "reef": 18,
  "state": "victory",
  "stepsExecuted": 9,
  "timeMs": 227400,
  "upgrades": 5,
  "wavesCleared": 7,
}
`;

exports[`golden match results > recife-1 · novatos: camarões + tartaruga corrente + golfinho coro 1`] = `
{
  "guardians": 4,
  "kills": {
    "dartfish": 26,
    "swimmer": 36,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 167,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 9,
  "timeMs": 221650,
  "upgrades": 5,
  "wavesCleared": 7,
}
`;

exports[`golden match results > recife-1 · novatos: tubarão alfa na margem + tartaruga casco + camarão 1`] = `
{
  "guardians": 3,
  "kills": {
    "dartfish": 26,
    "swimmer": 35,
    "tidebreaker": 1,
  },
  "leaks": {
    "swimmer": 1,
  },
  "pearls": 165,
  "reef": 19,
  "state": "victory",
  "stepsExecuted": 8,
  "timeMs": 170533,
  "upgrades": 5,
  "wavesCleared": 7,
}
`;

exports[`golden match results > recife-1 · novatos: tubarão frenesi + peixe-pedra emboscada + camarão 1`] = `
{
  "guardians": 3,
  "kills": {
    "dartfish": 26,
    "swimmer": 33,
    "tidebreaker": 1,
  },
  "leaks": {
    "swimmer": 3,
  },
  "pearls": 146,
  "reef": 17,
  "state": "victory",
  "stepsExecuted": 8,
  "timeMs": 202100,
  "upgrades": 5,
  "wavesCleared": 7,
}
`;

exports[`golden match results > recife-1 · perfuração + água-viva controle 1`] = `
{
  "guardians": 3,
  "kills": {
    "dartfish": 26,
    "swimmer": 36,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 227,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 8,
  "timeMs": 189517,
  "upgrades": 5,
  "wavesCleared": 7,
}
`;

exports[`golden match results > recife-1 · suporte com polvo (tinta) 1`] = `
{
  "guardians": 3,
  "kills": {
    "dartfish": 26,
    "swimmer": 32,
    "tidebreaker": 1,
  },
  "leaks": {
    "swimmer": 4,
  },
  "pearls": 149,
  "reef": 16,
  "state": "victory",
  "stepsExecuted": 8,
  "timeMs": 236900,
  "upgrades": 5,
  "wavesCleared": 7,
}
`;

exports[`golden match results > recife-2 · controle: água-viva elétrica no canal + baiacu na descida + perfuração 1`] = `
{
  "guardians": 5,
  "kills": {
    "dartfish": 31,
    "minnow": 90,
    "shellback": 14,
    "swimmer": 43,
    "tidebreaker": 1,
  },
  "leaks": {
    "dartfish": 1,
    "shellback": 4,
    "swimmer": 3,
  },
  "pearls": 168,
  "reef": 8,
  "state": "victory",
  "stepsExecuted": 14,
  "timeMs": 489500,
  "upgrades": 9,
  "wavesCleared": 10,
}
`;

exports[`golden match results > recife-2 · dano: camarões nos laços e no centro + caranguejo no canal 1`] = `
{
  "guardians": 5,
  "kills": {
    "dartfish": 32,
    "minnow": 90,
    "shellback": 18,
    "swimmer": 43,
    "tidebreaker": 1,
  },
  "leaks": {
    "swimmer": 3,
  },
  "pearls": 171,
  "reef": 17,
  "state": "victory",
  "stepsExecuted": 15,
  "timeMs": 440733,
  "upgrades": 10,
  "wavesCleared": 10,
}
`;

exports[`golden match results > recife-2 · novatos: camarões nos laços + tubarão frenesi no canal + tartaruga corrente 1`] = `
{
  "guardians": 5,
  "kills": {
    "dartfish": 32,
    "minnow": 90,
    "shellback": 18,
    "swimmer": 46,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 142,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 15,
  "timeMs": 426283,
  "upgrades": 10,
  "wavesCleared": 10,
}
`;

exports[`golden match results > recife-2 · novatos: tubarão alfa + camarões + golfinho sonar 1`] = `
{
  "guardians": 5,
  "kills": {
    "dartfish": 32,
    "minnow": 90,
    "shellback": 18,
    "swimmer": 46,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 197,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 14,
  "timeMs": 356917,
  "upgrades": 9,
  "wavesCleared": 10,
}
`;

exports[`golden match results > recife-3 · controle: água-viva no laço leste + baiacu na descida 1`] = `
{
  "guardians": 7,
  "kills": {
    "dartfish": 26,
    "minnow": 114,
    "moray": 5,
    "needlefish": 33,
    "shellback": 24,
    "swimmer": 34,
    "tidebreaker": 1,
  },
  "leaks": {
    "needlefish": 2,
    "swimmer": 3,
  },
  "pearls": 223,
  "reef": 13,
  "state": "victory",
  "stepsExecuted": 20,
  "timeMs": 708067,
  "upgrades": 13,
  "wavesCleared": 12,
}
`;

exports[`golden match results > recife-3 · dano: camarões meio/norte/laço + caranguejo no canal 1`] = `
{
  "guardians": 7,
  "kills": {
    "dartfish": 26,
    "minnow": 114,
    "moray": 5,
    "needlefish": 35,
    "shellback": 24,
    "swimmer": 36,
    "tidebreaker": 1,
  },
  "leaks": {
    "swimmer": 1,
  },
  "pearls": 207,
  "reef": 19,
  "state": "victory",
  "stepsExecuted": 21,
  "timeMs": 644267,
  "upgrades": 14,
  "wavesCleared": 12,
}
`;

exports[`golden match results > recife-4 · controle: água-viva no arco externo + baiacu na saída 1`] = `
{
  "guardians": 9,
  "kills": {
    "dartfish": 35,
    "ghostJelly": 16,
    "minnow": 100,
    "moray": 9,
    "needlefish": 36,
    "shellback": 31,
    "swimmer": 39,
    "tidebreaker": 1,
  },
  "leaks": {},
  "pearls": 220,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 27,
  "timeMs": 564533,
  "upgrades": 18,
  "wavesCleared": 15,
}
`;

exports[`golden match results > recife-4 · dano: camarões ilha/norte/oeste/leste + caranguejo no fundo da espiral 1`] = `
{
  "guardians": 7,
  "kills": {
    "dartfish": 35,
    "ghostJelly": 9,
    "minnow": 100,
    "moray": 9,
    "needlefish": 36,
    "shellback": 29,
    "swimmer": 39,
    "tidebreaker": 1,
  },
  "leaks": {
    "ghostJelly": 7,
    "shellback": 2,
  },
  "pearls": 739,
  "reef": 9,
  "state": "victory",
  "stepsExecuted": 21,
  "timeMs": 557650,
  "upgrades": 14,
  "wavesCleared": 15,
}
`;

exports[`golden match results > recife-5 · controle: água-viva na vala + baiacu antes da saída 1`] = `
{
  "guardians": 9,
  "kills": {
    "corruptedShark": 4,
    "dartfish": 40,
    "ghostJelly": 9,
    "minnow": 108,
    "moray": 8,
    "needlefish": 39,
    "shellback": 30,
    "swimmer": 30,
    "tidebreaker": 2,
  },
  "leaks": {
    "dartfish": 3,
    "ghostJelly": 1,
    "minnow": 2,
    "needlefish": 2,
    "shellback": 1,
    "swimmer": 1,
  },
  "pearls": 481,
  "reef": 7,
  "state": "victory",
  "stepsExecuted": 27,
  "timeMs": 486933,
  "upgrades": 18,
  "wavesCleared": 16,
}
`;

exports[`golden match results > recife-5 · dano: camarões proa/popa/leste/norte/sudeste + caranguejo sob o casco 1`] = `
{
  "guardians": 7,
  "kills": {
    "corruptedShark": 4,
    "dartfish": 40,
    "ghostJelly": 2,
    "minnow": 108,
    "moray": 8,
    "needlefish": 40,
    "shellback": 30,
    "swimmer": 30,
    "tidebreaker": 2,
  },
  "leaks": {
    "dartfish": 3,
    "ghostJelly": 8,
    "minnow": 2,
    "needlefish": 1,
    "shellback": 1,
    "swimmer": 1,
  },
  "pearls": 1041,
  "reef": 2,
  "state": "victory",
  "stepsExecuted": 21,
  "timeMs": 476817,
  "upgrades": 14,
  "wavesCleared": 16,
}
`;

exports[`golden match results > recife-6 · controle: água-viva no casco + baiacu na saída + perfuração 1`] = `
{
  "guardians": 11,
  "kills": {
    "corruptedShark": 8,
    "dartfish": 39,
    "ghostJelly": 13,
    "minnow": 114,
    "moray": 14,
    "needlefish": 50,
    "shellback": 45,
    "swimmer": 37,
    "tidebreaker": 4,
  },
  "leaks": {
    "ghostJelly": 1,
  },
  "pearls": 1208,
  "reef": 19,
  "state": "victory",
  "stepsExecuted": 33,
  "timeMs": 650717,
  "upgrades": 22,
  "wavesCleared": 18,
}
`;

exports[`golden match results > recife-6 · dano: camarões convés/nordeste/mastro/casco/sul + caranguejo na quilha 1`] = `
{
  "guardians": 9,
  "kills": {
    "corruptedShark": 8,
    "dartfish": 39,
    "ghostJelly": 5,
    "minnow": 114,
    "moray": 14,
    "needlefish": 50,
    "shellback": 45,
    "swimmer": 37,
    "tidebreaker": 4,
  },
  "leaks": {
    "ghostJelly": 9,
  },
  "pearls": 1736,
  "reef": 11,
  "state": "victory",
  "stepsExecuted": 27,
  "timeMs": 627067,
  "upgrades": 18,
  "wavesCleared": 18,
}
`;

exports[`golden match results > recife-6 · novatos: camarões + tubarão alfa + tartaruga casco + peixe-pedra 1`] = `
{
  "guardians": 11,
  "kills": {
    "corruptedShark": 8,
    "dartfish": 39,
    "ghostJelly": 14,
    "minnow": 114,
    "moray": 14,
    "needlefish": 50,
    "shellback": 45,
    "swimmer": 37,
    "tidebreaker": 4,
  },
  "leaks": {},
  "pearls": 1217,
  "reef": 20,
  "state": "victory",
  "stepsExecuted": 33,
  "timeMs": 621067,
  "upgrades": 22,
  "wavesCleared": 18,
}
`;
